--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,6 +6,6 @@
   <title><%-title %></title>
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/jquery.terminal.css">
-  <script src="http://localhost:35729/livereload.js"></script>
+  <script src="/livereload.js"></script>
 </head>
 <body>
