--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -2,7 +2,7 @@
 <script type="text/javascript" src="js/jquery.terminal.js"></script>
 <script type="text/javascript" src="js/socket.io.js"></script>
 <script type="text/javascript">
-var socket = io('http://192.168.1.100:9999');
+var socket = io('http://apio04.cloudapp.net');
   socket.on('angela.terminal.output', function (data) {
   	
   	document.terminal.echo(data.output)
