--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,6 +6,7 @@
   <title><%-title %></title>
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/jquery.terminal.css">
+  <link rel="stylesheet" href="/css/stylesheet.css">
   <script src="/livereload.js"></script>
 </head>
 <body>
