--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,6 @@
         </section>
       </div>
 </header>
-<div id="terminal" style="color:#B2E76C"></div>
+<div id="terminal" style="color:#B2E76C; height:400px; overflow-y:scroll"></div>
 
 <% include footer %>
