--- a/views/header.ejs
+++ b/views/header.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
-  <title><%-title %></title>
+  <title>Project Angela</title>
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/jquery.terminal.css">
   <link rel="stylesheet" href="/css/stylesheet.css">
